# VINS-Mobile-Android

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/libs/: opencv345-debug.aar
app/libs/VINS-Mobile-master/: CMakeLists.txt
app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/: CMakeLists.txt
app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/ceres-solver/jni/: Application.mk
app/libs/VINS-Mobile-master/VINS_ios/: CMakeLists.txt  VINS.cpp  VINS.hpp  draw_result.cpp  draw_result.hpp  feature_tracker.hpp  global_param.cpp  global_param.hpp
app/libs/VINS-Mobile-master/VINS_ios/global/: CMakeLists.txt  globalOpt.cpp  globalOpt.h
app/libs/VINS-Mobile-master/VINS_ios/global/GeographicLib/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/VINS_Android/: CMakeLists.txt  ViewController.cpp  ViewController.hpp
app/src/main/cpp/android/: android_wrapper.cpp  android_wrapper.h
app/src/main/cpp/jni/: nativelib.cpp
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/: ImageUtils.java  MainActivity.java
app/src/main/java/com/vell/vins/: ImageUtils.java  JavaCamera.java  JavaCameraActivity.java  SlamRecorder.java  Vins.java  VinsUtils.java
app/src/main/res/layout/: act_java_camera.xml  activity_main.xml
